test_programs/compile_failure/unsigned_integer_literal_underflow/src/main.nr
fn main() {
    foo(-1)
}

fn foo(_x: u8) {}
